crates/rspyts-macros/tests/ui/required_non_option.rs
use rspyts::bridge;

#[bridge]
pub struct RequiredNonOption {
    #[bridge(required)]
    pub value: String,
}

fn main() {}
